# PDFtools

./: CMakeLists.txt  readme.md
include/: PDFdeal.h  PDFtools.h
lib/: libmupdf.lib  libresources.lib  libthirdparty.lib
src/: PDFdeal.cpp  PDFtools.cpp
